# SBG-TIR-L1

./: .gitignore  AUTHORS  INSTALL  Makefile.am  Makefile.in  NEWS  NOTICE  README.md  README_developer.git  SBG-TIR_PPSD_L1_V03_20240621.md  aclocal.m4  bootstrap  common.am  configure  configure.ac  include.am  sbg_tir_l1.am
Documentation/SBG_L1_ATBD_Radiometric_Calibration/: SBG_L1_ATBD_Radiometric_Calibration.md
Documentation/SBG_L1_ATBD_Radiometric_Calibration/media/: image5.emf  image6.emf
bindings/python/: __init__.py  python.am  swig_wrap.tmpl
bindings/python/swig/: ecostress_scan_mirror.py  ecostress_scan_mirror_wrap.cc  ecostress_scan_mirror_wrap.h  swig_wrap.cc
config/: doxygen.cfg  doxygen_single.cfg  valgrind.suppressions
config/m4/: README.md  ac_afids.m4  ac_afids_data.m4  ac_blitz.m4  ac_boost.m4  ac_carto.m4  ac_check_found.m4  ac_copy_dir.m4  ac_doxygen.m4  ac_enable_debug.m4  ac_expat.m4  ac_fftw.m4  ac_gdal.m4  ac_geos.m4  ac_gsl.m4  ac_handle_with_arg.m4  ac_hdf5.m4  ac_hdfeos5.m4  ac_is_mac.m4  ac_msp.m4  ac_mspi_shared.m4  ac_ogdi.m4  ac_openjpeg.m4  ac_perl_module.m4  ac_pkg_swig.m4  ac_python.m4  ac_python_module_with_version.m4  ac_python_nosetests.m4  ac_python_pytest.m4  ac_python_sphinx.m4  ac_search_lib.m4  ac_spice.m4  ac_vicar_gdalplugin.m4  ac_vicar_rtl.m4  afids_a_option.m4  afids_common.m4  afids_python.m4  ax_code_coverage.m4  ax_with_curses.m4  swig_python.m4
config/m4_local/: README  sbg_tir_l1_common.m4  sbg_tir_l1_source_directory.m4
docker-env/: Makefile  README.md  env_makefile.local
env/: Makefile  README.md  sbg_environment_fixed.yml  sbg_environment_latest.yml
lib/: README.md  ecostress_scan_mirror.cc  ecostress_scan_mirror.h  ecostress_scan_mirror.i  ecostress_scan_mirror_test.cc  global_fixture.cc  global_fixture.h  global_fixture_default.cc.in  lib.am  sbg_serialize_support.h  sbg_tir_l1_common.i  test_all.cc  test_all.sh  unit_test_support.h
python/: Makefile  README_developer.md  conftest.py  pyproject.toml  pytest.ini  python.am  setup.py
python/init/: __init__.py
python/l1a_cal_sbg/: L1A_PCF_UPF.txt  README.md
python/l1a_cal_sbg/common/: log_utils.py  parse_utils.py
python/l1a_cal_sbg/el1a_2pt/: el1a_2pt.py  el1a_2pt_conversion.py  el1a_2pt_gain_offset.py  el1a_2pt_masking.py  el1a_2pt_stripes.py  el1a_2pt_temp_conversion.py
python/l1a_cal_sbg/el1a_bbcal/: create_blackbody_radiance.py  el1a_bbcal.py  extract_blackbody_data.py  extract_uncalibrated_dn.py  go_el1a_bbcal.py  prepare_for_el1a_2pt.py  setup_parameters_and_locals.py
python/lib/: __init__.py  dummy.py  dummy_test.py  lib.am
python/sbg_tir_l1/: __init__.py  dummy.py  l1_osp_dir.py  l1a_cal_process.py  l1b_geo_process.py  l1b_rad_process.py  misc.py  prog_wrap.py  py.typed  version.py
python/test/: conftest.py  pytest.ini
python/test/end_to_end/: README.md
python/test/fixtures/: README.md  dir_fixture.py  misc_fixture.py
python/test/unit/: README.md  dummy_test.py  l1_osp_dir_test.py
python/test_support/: __init__.py  test_support.am  test_support.py
script/: script.am  setup_sbg_tir_l1.csh.in  setup_sbg_tir_l1.sh.in
unit_test_data/: README.md  SMAP_L1B_TB_SPS_RunConfig_20150228T224642376.xml  unit_test_data.am
